# SecuDataExtractor

./: AUTHORS  README.md  app.py  database.py  models.py  pyproject.toml
scrapers/: base_scraper.py  bugcrowd_scraper.py  cve_scraper.py  exploitdb_scraper.py  hackerone_scraper.py
static/: script.js  style.css
templates/: datasets.html  index.html  results.html
utils/: data_processor.py  jsonl_validator.py
